# sentinellayer

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  Adding-HITL-Agent-Fix-Plan.md  Adding-Terraform-Feature.md  CONTEXT.md  Current-Architecture-vs-MCP-Planning.md  Dockerfile  LICENSE  PLAN-ops-agent-overhaul.md  ProposedActionV2-ImplementationPlan.md  README.md  STATUS.md  ag_opus_issues_detailed.md  demo.py  demo_a2a.py  demo_live.py  execution-rearch.md  new-ui.md  pyproject.toml  rearchitecture.md  requirements.txt  use_cases.md
dashboard/: index.html  package-lock.json  package.json  playwright.config.js  playwright.perf.config.js  tailwind.config.js
data/: policies.json  seed_incidents.json  seed_resources.json
docs/: API.md  ARCHITECTURE.md  QA-AUDIT-REPORT-2026-04-30.md  QA-BUG-REPORT-2026-04-28.md  QA-REVERIFICATION-REPORT-2026-04-28.md  RuriSkry-Exec-Deck.pptx  SERVICES.md  SETUP.md  alert-wiring.md  architecture-diagram.html  demo-script.md  oss-readiness.md  projectdesc.md  ruriskry-architecture.excalidraw  slack-setup.md  use_cases.md
functions/: function_app.py
infrastructure/: deploy.md
learning/: 03-blast-radius.md  04-historical-agent.md  05-financial-agent.md  06-bugfixes.md  12-interception.md
scripts/: cleanup.sh  deploy.sh  seed_data.py  setup_env.sh  validate_env.py
src/: __init__.py  config.py
tests/: test_a2a.py  test_agent_agnostic.py  test_api_preflight.py  test_async_migration.py  test_az_executor.py  test_blast_radius.py  test_conditional_approvals.py  test_cost_agent.py  test_coverage_manifest.py  test_dashboard_api.py  (+35 more)
(+173 files in other folders)
